--- a/backmatter.tex
+++ b/backmatter.tex
@@ -52,6 +52,10 @@
 %\acro{KF}[KF]{Kalman Filter}
 \acro{DA}[DA]{Deterministic Annealing}
 \acro{CHS}[CHS]{Charged hadron subtraction}
+\acro{CSV}[CSV]{Combined Secondary Vertex}
+\acro{IVF}[IVF]{Inclusive Vertex Finder}
+\acro{UE}[UE]{underlying event}
+\acro{MPF}[MPF]{missing transverse energy projection fraction}
 \end{acronym}
 
 
