Object reco edit round 1

--- a/backmatter.tex
+++ b/backmatter.tex
@@ -47,12 +47,14 @@
 \acro{RF}[RF]{radio frequency}
 \acro{PF}[PF]{Particle Flow}
 \acro{BDTs}[BDTs]{Boosted Decision Trees}
+\acro{KF}[KF]{Kalman Filter}
 \acro{CTF}[CTF]{Combinatorial Track Finder}
 \acro{GSF}[GSF]{Gaussian Sum Filter}
 %\acro{KF}[KF]{Kalman Filter}
 \acro{DA}[DA]{Deterministic Annealing}
-\acro{CHS}[CHS]{Charged hadron subtraction}
+\acro{CHS}[CHS]{charged hadron subtraction}
 \acro{CSV}[CSV]{Combined Secondary Vertex}
+
 \acro{IVF}[IVF]{Inclusive Vertex Finder}
 \acro{UE}[UE]{underlying event}
 \acro{MPF}[MPF]{missing transverse energy projection fraction}
