--- a/references.bib
+++ b/references.bib
@@ -1,12 +1,32 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Adinda de Wit at 2016-12-14 17:41:02 +0000 
+%% Created for Adinda de Wit at 2016-12-15 22:38:21 +0000 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{cms-trk-dp,
+	Collaboration = {CMS},
+	Date-Added = {2016-12-15 17:29:51 +0000},
+	Date-Modified = {2016-12-15 17:30:21 +0000},
+	Journal = {CMS Performance Note},
+	Keywords = {Objects},
+	Title = {Primary vertex resolution in 2016},
+	Volume = {CMS-DP-2016-041},
+	Year = {2016}}
+
+@article{cms-dp-mvamet,
+	Collaboration = {CMS},
+	Date-Added = {2016-12-15 17:14:08 +0000},
+	Date-Modified = {2016-12-15 17:15:26 +0000},
+	Journal = {CMS Performance Note},
+	Keywords = {Objects},
+	Title = {Multivariate Determination of the Missing Energy in the Transverse Plane ($E_{\text{T}}^{\text{miss}}$ at $\sqrt{s} = 13$ TeV},
+	Volume = {CMS-DP-2015-042},
+	Year = {2015}}
 
 @article{cms-ivf,
 	Collaboration = {CMS},
@@ -31,7 +51,8 @@
 	Keywords = {Objects},
 	Title = {Pileup subtraction using jet areas},
 	Volume = {659},
-	Year = {2007}}
+	Year = {2007},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1016/j.physletb.2007.09.077}}
 
 @article{cms-jets-puid,
 	Collaboration = {CMS},
