Adding skeleton of MSSM chapter

--- a/thesis.tex
+++ b/thesis.tex
@@ -51,7 +51,8 @@
 \begin{mainmatter}
   \input{Detector/Detector}
   \input{Objects/Objects}
-  \input{Hhh/hhh}
+  \input{Hhh/Hhh}
+  \input{MSSM/MSSM}
 \end{mainmatter}
 
 %% Produce the appendices
